public class InvalidReadingException extends Exception{
    public InvalidReadingException(String message){
        super(message);
    }
}
