public class SensorNotFoundException {
    public SensorNotFoundException(String message) {
        super(message);
    }
}
